# abc-energy-sales-agent

./: .gitattributes  .gitignore  README.md  pyproject.toml
Bonus/bonus1_capacity/: README.md  kv_capacity.json  kv_capacity_calc.py  kv_capacity_table.md
Bonus/bonus2_quant/: .gitignore  README.md  quantize_modelopt.py  smoke_vllm_modelopt.py
Bonus/bonus3_observability/: README.md  __init__.py  eval_trace_hook.py  run_multiturn_trace_demo.py  (+1 more)
configs/: bench.yaml  dpo.yaml  eval_judge.yaml  eval_offline.yaml  merge.yaml  normalize.yaml  quant.yaml  serve.yaml  sft.yaml  sft_a100.yaml  split.yaml  synthesize.yaml
data/: README.md
docker/: Dockerfile.train  compose.yaml
reports/: REPORT.md
scripts/: run_e2e_smoke.sh
tests/: conftest.py  test_analyze.py  test_bench_config.py  test_bench_report.py  test_calibration.py  test_config.py  test_dedup.py  test_dpo_config.py  test_dpo_formatting.py  test_dpo_metrics.py  test_dpo_probes.py  test_eval_generate.py  test_eval_judge.py  test_eval_judge_config.py  test_eval_local_infer.py  test_eval_offline_config.py  test_eval_rules.py  test_eval_samples.py  test_eval_summary.py  test_formatting.py  test_io.py  test_locust_logic.py  test_manifest.py  test_merge_adapter_gpu.py  test_merge_config.py  test_merge_consistency.py  test_normalize.py  test_normalize_cli.py  test_openrouter.py  test_patch_quant_config.py  test_plotting.py  test_quant_config.py  test_quantize_awq_gpu.py  test_run_judge_cli.py  test_run_offline_eval_cli.py  test_schema.py  test_serve_config.py  test_sft_config.py  test_split.py  test_split_cli.py  (+6 more)
(+156 files in other folders)
